# octane-mcp

./: .gitignore  AGENTS.md  COMMERCIAL-TERMS.md  LICENSE  LICENSE-DATA.md  LICENSE-SCOPE.md  NOTICE  README.md  REVIEW.md  ROADMAP.md  conftest.py  demo_scene_harvest.py  pyproject.toml  run_octanex_mcp.sh  show_cube.py  surface_index.json
archive/: verify_inline_json.lua
benchmarks/: _patch_rrr.py  acceptance.py  harness.py  png_stats.py  regen_reset.py  spec.py  sweep.py  sweep_results.json  verify_recipes.py  vision_check.py
corpus/: README.md
docs/: WIP.md  agent-quickstart.md  benchmark-suite.md  canvas-implementation-roadmap.md  canvas-licensing-boundary.md  canvas-roadmap.md  canvas-web-ui-build-plan.md  command-schema.md  coord-protocol.md  idea.md  local-model-rich-moa.md  luisa-render-backend-investigation.md  octane-bridge.md  octane-lua-api-bridge-review.md  octane-x-no-cli.md  octanex-agentic-canvas-product-spec.md  octanex-apple-test-report.md  physical-simulation-recipe-suite.md  physics-real-library-smokes.md  plan.md  pointcloud-visualization.md  recipe-book.md  recipe-gap-fill.md  recipe-library.md  render-scheduler.md  review-2.md  roadmap.md  scene-plan.md  source-lineage.md  terranthropic-principles.md  visual-grammar.md  visual-iteration-protocol.md  visualization-backends-research.md
examples/: README.md
hermes/: README.md
lua_scripts/: saturn_scene_v2.lua
octane_lua/: export_api_docs.lua  export_api_docs_v2.lua  export_api_docs_v3.lua  hermes_bridge.lua  hermes_bridge_oneshot_v2.lua  hermes_bridge_persistent_v1.lua  (+8 more)
(+1296 files in other folders)
