[project]
name = "octanex-mcp"
version = "0.1.0"
description = "Local MCP bridge prototype for controlling Octane X via a Lua JSON command queue."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
]

[project.optional-dependencies]
science = ["numpy", "trimesh", "networkx"]
fields = ["scipy"]
geo = ["shapely"]

[project.scripts]
octanex-mcp = "octanex_mcp.server:main"
octanex-gateway = "octanex_mcp.gateway:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
