[project]
name = "octanex-mcp"
version = "0.1.0"
description = "Local MCP bridge prototype for controlling Octane X via a Lua JSON command queue."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
science = ["numpy", "trimesh", "networkx"]
fields = ["scipy"]
geo = ["shapely"]
pointcloud = ["numpy", "xarray", "netCDF4"]
# Image-format normalization for the WP9 Commons harvest (JPEG thumbnails ->
# PNG so the stdlib pixel-QA pipeline can read them). Keep it out of the core
# server deps: the MCP server only needs the already-normalized corpus.
harvest = ["pillow"]

[project.scripts]
octanex-mcp = "octanex_mcp.server:main"
octanex-gateway = "octanex_mcp.gateway:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
